@@ -4,6 +4,17 @@ Default: true
 Default[sparc]: false
 Description: enable frame buffer console on boot
 
+Template: debian-installer/exit/always_halt
+Type: boolean
+Default: false
+Default[s390]: true
+Description: always halt the machine
+
+Template: debian-installer/exit/halt
+Type: boolean
+Default: false
+Description: halt the machine
+
 Template: debian-installer/kernel/commandline
 Type: string
 Default: ro
