@@ -1,0 +1,9 @@
+case "$EXIT" in
+  0|11) ;;
+  12)
+    exec /lib/debian-installer/exit
+    ;;
+  *) 
+    # error message
+    ;;
+esac
