@@ -1,0 +1,16 @@
+#!/bin/sh
+set -e
+export DEBIAN_FRONTEND=none
+. /usr/share/debconf/confmodule
+
+CMD=reboot
+
+db_get debian-installer/exit/always_halt
+[ "$RET" = "true" ] && CMD=halt
+db_get debian-installer/exit/halt
+[ "$RET" = "true" ] && CMD=halt
+
+/bin/umount -a -r
+/sbin/swapoff -a
+
+$CMD
