@@ -3,8 +3,9 @@ rootskel (0.85) UNRELEASED; urgency=low
   * Bastian Blank
     - Use small syslog output. Needs busybox-cvs 20040623-1.
     - Allow the exit code of debconf be non null.
+    - Reboot/halt machine if asked to do so.
 
- -- Bastian Blank <waldi@debian.org>  Thu, 08 Jul 2004 13:34:37 +0200
+ -- Bastian Blank <waldi@debian.org>  Thu, 08 Jul 2004 14:08:34 +0200
 
 rootskel (0.84) unstable; urgency=low
 
